home page update with "How it works" section

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -22,55 +22,127 @@
 
     <hr style="margin: 0;">
 
-    <p>
-         Texte à refaire.
-        <br>
-        Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
-    </p>
+    <section>
 
+        <h3 class="title is-3 has-text-centered">Comment ça fonctionne ?</h3>
 
-    <br>
+        <ul class="steps is-hidden-mobile">
+            <li class="step-item is-completed is-success">
+                <div class="step-marker">1</div>
+                <div class="step-details is-primary is-completed">
+                    <p class="step-title">Step 1</p>
+                    <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
+                    <p>Ajouter des produits alternatifs</p>
+                </div>
+            </li>
+            <li class="step-item is-success is-completed">
+                <div class="step-marker">2</div>
+                <div class="step-details">
+                    <p class="step-title">Step 2</p>
+                    <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
+                    <p>Voter pour vos produits favoris pour leur donner de la visibilité</p>
+                </div>
+            </li>
+            <li class="step-item is-success is-completed">
+                <div class="step-marker">3</div>
+                <div class="step-details">
+                    <p class="step-title">Step 3</p>
+                    <span><i class="fas fa-search image is-64x64" style="display: inline;"></i></span>
+                    <p>Rechercher et trouver des alternatives parmi tous les produits</p>
+                </div>
+            </li>
+        </ul>
 
-    <div class="columns">
-        <div class="column">
-            <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <article class="tile is-child notification is-info">
-                        <p class="title">Produit en vogue</p>
-                        <p class="subtitle">With an image</p>
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
-                        </figure>
-                    </article>
+        <div class="columns is-hidden-tablet">
+            <hr style="margin: 0;">
+            <div class="column has-text-centered">
+                <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
+                <ul class="steps">
+                <li class="step-item is-completed is-success">
+                  <div class="step-marker">1</div>
+                </li>
+                </ul>
+                <p>Ajouter des produits alternatifs</p>
+            </div>
+            <hr style="margin: 0;">
+            <div class="column has-text-centered">
+                <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
+                <ul class="steps">
+                <li class="step-item is-completed is-success">
+                  <div class="step-marker">2</div>
+                </li>
+                </ul>
+                <p>Voter pour vos produits favoris pour leur donner de la visibilité</p>
+            </div>
+            <hr style="margin: 0;">
+            <div class="column has-text-centered">
+                <span><i class="fas fa-search image is-64x64" style="display: inline;"></i></span>
+                <ul class="steps">
+                <li class="step-item is-completed is-success">
+                  <div class="step-marker">3</div>
+                </li>
+                </ul>
+                <p>Rechercher et trouver des alternatives parmi tous les produits</p>
+            </div>
+        </div>
+
+    </section>
+
+    <hr style="margin: 0;">
+
+    <section style="background: #f8f9fa">
+        <p>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget arcu ut arcu congue ultricies et ut turpis. Morbi vitae mauris et nisi gravida dignissim. Nunc et magna sit amet orci bibendum pharetra. Sed vehicula nisl erat, et lobortis eros aliquam at. Cras commodo pulvinar risus, nec auctor odio sodales.
+            <br>
+            Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
+        </p>
+    </section>
+
+    <hr style="margin: 0;">
+
+    <section>
+        <div class="columns">
+            <div class="column">
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-info">
+                            <p class="title">Produit en vogue</p>
+                            <p class="subtitle">With an image</p>
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/640x480.png">
+                            </figure>
+                        </article>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-info">
+                            <p class="title">Produit en vogue</p>
+                            <p class="subtitle">With an image</p>
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/640x480.png">
+                            </figure>
+                        </article>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-info">
+                            <p class="title">Produit en vogue</p>
+                            <p class="subtitle">With an image</p>
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/640x480.png">
+                            </figure>
+                        </article>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="column">
-            <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <article class="tile is-child notification is-info">
-                        <p class="title">Produit en vogue</p>
-                        <p class="subtitle">With an image</p>
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
-                        </figure>
-                    </article>
-                </div>
-            </div>
-        </div>
-        <div class="column">
-            <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <article class="tile is-child notification is-info">
-                        <p class="title">Produit en vogue</p>
-                        <p class="subtitle">With an image</p>
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
-                        </figure>
-                    </article>
-                </div>
-            </div>
-        </div>
-    </div>
+    </section>
+
 
 </template>
