--- a/TFC/imports/UI/user/register.html
+++ b/TFC/imports/UI/user/register.html
@@ -48,7 +48,7 @@
 
         <div class="field">
             <input type="checkbox" class="is-checkradio" id="newsletter" name="newsletter" value="newsletter">
-            <label for="newsletter" class="label">S'abonner à la newsletter (pas plus d'un email par mois)</label>
+            <label for="newsletter" class="label">Je souhaite recevoir les newsletter de Plexar (pas plus d'un email par mois)</label>
         </div>
 
         <br>
