changes before 28/03 session

--- a/TFC/imports/UI/manageProduct.html
+++ b/TFC/imports/UI/manageProduct.html
@@ -27,11 +27,11 @@
         </div>
 
         <div class="field">
-            <input type="checkbox" class="checkbox" id="cat1" name="category" value="1">
+            <input type="checkbox" class="is-checkradio" id="cat1" name="category" value="1">
             <label for="cat1">Catégorie 1</label>
-            <input type="checkbox" class="checkbox" id="cat2" name="category" value="2">
+            <input type="checkbox" class="is-checkradio" id="cat2" name="category" value="2">
             <label for="cat2">Catégorie 2</label>
-            <input type="checkbox" class="checkbox" id="cat3" name="category" value="3">
+            <input type="checkbox" class="is-checkradio" id="cat3" name="category" value="3">
             <label for="cat3">Catégorie 3</label>
         </div>
 
