--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -12,7 +12,7 @@
         }
     </style>
 
-    <div class="card" style="width: fit-content;">
+    <div class="card" style="width: fit-content; width: -moz-fit-content;">
         <header class="card-header">
             <div class="card-header-icon">
                 <span class="icon"><i class="fas fa-reply"></i></span>
