--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -118,7 +118,12 @@
         <div class="hero">
             <div class="hero-body">
                 <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget arcu ut arcu congue ultricies et ut turpis. Morbi vitae mauris et nisi gravida dignissim. Nunc et magna sit amet orci bibendum pharetra. Sed vehicula nisl erat, et lobortis eros aliquam at. Cras commodo pulvinar risus, nec auctor odio sodales.
+                  Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des magasins et des produits mais également d’en proposer.
+
+                  Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits et de magasins disponible sur le site.
+
+                  La liste de produits et de magasins varie en fonctions de différents critères tels que le bio, le vegan ou encore le local. 
+
                     <br>
                     Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
                 </p>
