--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -118,11 +118,14 @@
         <div class="hero">
             <div class="hero-body">
                 <p>
+                  <div style="text-align:center">
+
                   Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des magasins et des produits mais également d’en proposer.
 
                   Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits et de magasins disponible sur le site.
 
-                  La liste de produits et de magasins varie en fonctions de différents critères tels que le bio, le vegan ou encore le local. 
+                  La liste de produits et de magasins varie en fonctions de différents critères tels que le bio, le vegan ou encore le local.
+                  </div>
 
                     <br>
                     Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
