--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -128,7 +128,11 @@
                   </div>
 
                     <br>
+
+                    <div style="text-align:center">
+
                     Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
+                    </div>
                 </p>
             </div>
 
