--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -117,23 +117,21 @@
 
         <div class="hero">
             <div class="hero-body">
-                <p>
-                  <div style="text-align:center">
+              <div class="has-text-centered">
 
-                  Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des magasins et des produits mais également d’en proposer.
+              Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des magasins et des produits mais également d’en proposer.
 
-                  Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits et de magasins disponible sur le site.
+              Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits et de magasins disponible sur le site.
 
-                  La liste de produits et de magasins varie en fonctions de différents critères tels que le bio, le vegan ou encore le local.
-                  </div>
+              La liste de produits et de magasins varie en fonctions de différents critères tels que le bio, le vegan ou encore le local.
+              </div>
 
-                    <br>
+                <br>
 
-                    <div style="text-align:center">
+                <div class="has-text-centered">
 
-                    Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
-                    </div>
-                </p>
+                Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
+                </div>
             </div>
 
         </div>
