--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -1,5 +1,5 @@
 <template name="editProfile">
-    <div class="container has-text-center" style="width: fit-content;">
+    <div class="container has-text-center width-fit-content">
         <h2 class="title">Editer le profil</h2>
         <form id="editProfileForm">
 
