--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -129,7 +129,7 @@
             </div>
 
             <div class="column" style="background-color: #f3f3f3;">
-                <p>Réseaux sociaux</p>
+                <p>Suivez nous sur </p>
                 <span class="icon is-medium">
                     <img src="instagram.svg" alt="">
                 </span>
