--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -121,8 +121,8 @@
 
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
-                            <li>blabla</li>
-                            <li>blabla</li>
+                            <li>Nous contacter</li>
+                            <li>Foire aux questions</li>
                         </ul>
                     </div>
                 </div>
