--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -114,8 +114,8 @@
                 <div class="columns is-mobile">
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
+                            <li>Qui sommes nous ?</li>
                             <li>Crédits</li>
-                            <li>FAQ</li>
                         </ul>
                     </div>
 
