--- a/TFC/imports/UI/messages/header.html
+++ b/TFC/imports/UI/messages/header.html
@@ -1,6 +1,6 @@
 <template name="header">
     {{#if messageToDisplay}}
-        <article class="message {{style}}">
+        <article class="message {{style}}" style="margin-bottom: 0;">
             <div class="message-header">
                 <p>{{headerContent}}</p>
                 <button class="delete" aria-label="delete"></button>
