--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -46,7 +46,7 @@
                         </span>
                         <span class="file-label">Choisir un fichier…</span>
                     </span>
-                    <span class="file-name" style="text-align: center;">Aucun fichier sélectionné</span>
+                    <span class="file-name">Aucun fichier sélectionné</span>
                 </label>
             </div>
 
