--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -25,7 +25,7 @@
 
     <section>
 
-        <div class="hero is-medium is-hidden-mobile">
+        <div class="hero is-hidden-mobile">
             <div class="hero-body">
                 <div class="container has-text-centered">
 
@@ -108,7 +108,6 @@
 
             </div>
         </div>
-
     </section>
 
     <hr style="margin: 0;">
@@ -117,20 +116,15 @@
 
         <div class="hero">
             <div class="hero-body">
-              <div class="has-text-centered">
-
-              Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des magasins et des produits mais également d’en proposer.
-
-              Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits et de magasins disponible sur le site.
-
-              La liste de produits et de magasins varie en fonctions de différents critères tels que le bio, le vegan ou encore le local.
-              </div>
+                <div class="has-text-centered">
+                    Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des produits mais également d’en proposer.
+                    Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits disponibles sur le site.
+                </div>
 
                 <br>
 
                 <div class="has-text-centered">
-
-                Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
+                    Découvrez nos {{productsCounter}} produits à impact social !
                 </div>
             </div>
 
