home text modification and edit button added in product page

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -4,7 +4,7 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <p class="title">PLEXAR</p>
-                <p class="subtitle">La plateforme participative de référencement de produits alternatifs</p>
+                <p class="subtitle">La plateforme participative de référencement de produits à impact social</p>
                 <form id="searchForm">
                     <div class="field has-addons" style="justify-content: center;">
                         <div class="control" style="width: 25em; max-width: 100%;">
@@ -38,7 +38,7 @@
                             <div class="step-details is-primary is-completed">
                                 <p class="step-title">Step 1</p>
                                 <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
-                                <p>Ajouter des produits alternatifs</p>
+                                <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager ... avec la communauté</p>
                             </div>
                         </li>
 
@@ -47,7 +47,7 @@
                             <div class="step-details">
                                 <p class="step-title">Step 2</p>
                                 <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
-                                <p>Voter pour vos produits favoris pour leur donner de la visibilité</p>
+                                <p>Votez pour vos produits favoris pour leur donner de la visibilité</p>
                             </div>
                         </li>
 
@@ -56,7 +56,7 @@
                             <div class="step-details">
                                 <p class="step-title">Step 3</p>
                                 <span><i class="fas fa-search image is-64x64" style="display: inline;"></i></span>
-                                <p>Rechercher et trouver des alternatives parmi tous les produits</p>
+                                <p>Trouvez des alternatives pour consommer en ayant un impact positif sur la société</p>
                             </div>
                         </li>
 
@@ -74,36 +74,21 @@
 
                 <div class="column has-text-centered">
                     <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
-                    <ul class="steps">
-                    <li class="step-item is-completed is-success">
-                      <div class="step-marker">1</div>
-                    </li>
-                    </ul>
-                    <p>Ajouter des produits alternatifs</p>
+                    <p>Chacun est libre de contribuer en ajoutant des produits et ainsi faire grandir avec la communauté</p>
                 </div>
 
                 <hr style="margin: 0;">
 
                 <div class="column has-text-centered">
                     <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
-                    <ul class="steps">
-                    <li class="step-item is-completed is-success">
-                      <div class="step-marker">2</div>
-                    </li>
-                    </ul>
-                    <p>Voter pour vos produits favoris pour leur donner de la visibilité</p>
+                    <p>Votez pour vos produits favoris pour leur donner de la visibilité</p>
                 </div>
 
                 <hr style="margin: 0;">
 
                 <div class="column has-text-centered">
                     <span><i class="fas fa-search image is-64x64" style="display: inline;"></i></span>
-                    <ul class="steps">
-                    <li class="step-item is-completed is-success">
-                      <div class="step-marker">3</div>
-                    </li>
-                    </ul>
-                    <p>Rechercher et trouver des alternatives parmi tous les produits</p>
+                    <p>Trouvez des alternatives pour consommer en ayant un impact positif sur la société</p>
                 </div>
 
             </div>
