--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -105,10 +105,13 @@
 
                 <button class="button">Partager la page du produit sur les réseaux sociaux</button>
                 <button class="button has-text-danger">
-                    <span><i class="fas fa-exclamation-triangle"></i></span>
+                    <span class="icon"><i class="fas fa-exclamation-triangle"></i></span>
                     <p>Signaler</p>
                 </button>
-                <button class="button">Lien vers la page du magasin / site</button>
+                <button class="button">
+                    <span class="icon"><i class="fas fa-edit"></i></span>
+                    Proposer une modification
+                </button>
             </div>
         </div>
     </div>
