form styling (auto expand)

--- a/TFC/imports/UI/manageProduct.html
+++ b/TFC/imports/UI/manageProduct.html
@@ -39,8 +39,8 @@
             <div class="select">
                 <select id="categories">
                     <option value="add" selected>Ajouter une catégorie</option>
-                    <option value="Catégorie 1">1</option>
-                    <option value="Catégorie 2">2</option>
+                    <option value="Alimentation">Alimentation</option>
+                    <option value="Informatique">Informatique</option>
                     <option value="Catégorie 3">3</option>
                     <option value='Catégorie 4'>4</option>
                 </select>
@@ -52,5 +52,5 @@
 
         <button id="addProduct" type="submit" class="button">Ajouter le produit !</button>
     </form>
-    
+
 </template>
