--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -14,7 +14,7 @@
 
     <div class="card width-fit-content" style="margin: auto;">
         <header class="card-header">
-            <div class="card-header-icon">
+            <div class="card-header-icon" id="return">
                 <span class="icon"><i class="fas fa-reply"></i></span>
                 <p>Retour</p>
             </div>
