credits and contributions pages started

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -102,14 +102,12 @@
         <div class="hero">
             <div class="hero-body">
                 <div class="has-text-centered">
-                    Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des produits mais également d’en proposer.
-                    Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits disponibles sur le site.
-                </div>
-
-                <br>
-
-                <div class="has-text-centered">
-                    Découvrez nos {{productsCounter}} produits à impact social !
+                    <p>
+                        Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des produits mais également d’en proposer.
+                        Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits disponibles sur le site.
+                        <br>
+                        Découvrez nos <span class="has-text-primary" style="font: 40px 'Changa One';">{{productsCounter}}</span> produits à impact social !
+                    </p>
                 </div>
             </div>
 
