--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -101,7 +101,10 @@
                     {{/each}}
                 </div>
 
-                <button class="button">Partager la page du produit sur les réseaux sociaux</button>
+                <button class="button">
+                    <span class="icon"><i class="fas fa-share-alt"></i></span>
+                    <p>Partager</p>
+                </button>
                 <button class="button has-text-danger">
                     <span class="icon"><i class="fas fa-exclamation-triangle"></i></span>
                     <p>Signaler</p>
