--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -63,6 +63,10 @@
                                             <span class="icon"><i class="fas fa-bookmark"></i></span>
                                             <span>Mes favoris</span>
                                         </a>
+                                        <a class="navbar-item" id="contributions">
+                                            <span class="icon"><i class="fas fa-list"></i></span>
+                                            <span>Mes contributions</span>
+                                        </a>
                                         <a class="navbar-item" id="editProfile">
                                             <span class="icon"><i class="fas fa-user-edit"></i></span>
                                             <span>Éditer le profil</span>
@@ -114,8 +118,8 @@
                 <div class="columns is-mobile">
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
-                            <li>Qui sommes nous ?</li>
-                            <li>Crédits</li>
+                            <li>A propos de Plexar</li>
+                            <li id="credits">Crédits</li>
                         </ul>
                     </div>
 
