--- a/TFC/imports/UI/credits.html
+++ b/TFC/imports/UI/credits.html
@@ -1,3 +1,6 @@
-
-<!-- Instagram svg -->
-<p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></p>
+<template name="credits">
+    <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></p>
+    <a href="https://bulma.io">
+      <img src="madeWithBulma.png" alt="Made with Bulma" width="256" height="48">
+    </a>
+</template>
