--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -9,6 +9,12 @@
                         <span>Mes favoris</span>
                     </a>
                 </li>
+                <li id="contributions">
+                    <a>
+                        <span class="icon"><i class="fas fa-list"></i></span>
+                        <span>Mes contributions</span>
+                    </a>
+                </li>
                 <li id="editProfile">
                     <a>
                         <span class="icon"><i class="fas fa-user-edit"></i></span>
