edit profile removed, user informations added

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -67,9 +67,9 @@
                                             <span class="icon"><i class="fas fa-list"></i></span>
                                             <span>Mes contributions</span>
                                         </a>
-                                        <a class="navbar-item" id="editProfile">
-                                            <span class="icon"><i class="fas fa-user-edit"></i></span>
-                                            <span>Éditer le profil</span>
+                                        <a class="navbar-item" id="informations">
+                                            <span class="icon"><i class="fas fa-user"></i></span>
+                                            <span>Mes informations</span>
                                         </a>
                                         <hr class="navbar-divider">
                                         <a class="navbar-item logout">
@@ -119,7 +119,7 @@
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
                             <li>A propos de Plexar</li>
-                            <li id="credits">Crédits</li>
+                            <li id="credits" style="cursor: pointer;">Crédits</li>
                         </ul>
                     </div>
 
