--- a/TFC/imports/UI/manageProduct.html
+++ b/TFC/imports/UI/manageProduct.html
@@ -38,7 +38,7 @@
         <div class="field">
             <div class="select">
                 <select id="categories">
-                    <option value="add" selected>Ajouter une catégorie</option>
+                    <option value="add" selected disabled hidden>Ajouter une catégorie</option>
                     <option value="Alimentation">Alimentation</option>
                     <option value="Informatique">Informatique</option>
                     <option value="Catégorie 3">3</option>
@@ -50,7 +50,7 @@
 
         </div>
 
-        <button id="addProduct" type="submit" class="button">Ajouter le produit !</button>
+        <button id="addProduct" type="submit" class="button is-success">Ajouter le produit !</button>
     </form>
 
 </template>
