--- a/TFC/imports/UI/user/informations.html
+++ b/TFC/imports/UI/user/informations.html
@@ -1,6 +1,6 @@
-<template name="editProfile">
+<template name="informations">
     <div class="container has-text-center width-fit-content">
-        <h2 class="title">Editer le profil</h2>
+        <h3 class="title is-3">Mes informations</h3>
         <form id="editProfileForm">
 
             <div class="field has-animated-label">
@@ -79,7 +79,10 @@
 
             <br><br>
 
-            <button type="submit" class="button is-success">Valider</button>
+            <button type="submit" class="button is-success">
+                <span class="icon"><i class="fas fa-user-edit"></i></span>
+                <p>Modifier mes informations</p>
+            </button>
         </form>
     </div>
 </template>
