--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -15,10 +15,10 @@
                         <span>Mes contributions</span>
                     </a>
                 </li>
-                <li id="editProfile">
+                <li id="informations">
                     <a>
-                        <span class="icon"><i class="fas fa-user-edit"></i></span>
-                        <span>Éditer le profil</span>
+                        <span class="icon"><i class="fas fa-user"></i></span>
+                        <span>Mes informations</span>
                     </a>
                 </li>
                 <li class="logout">
