--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -1,7 +1,7 @@
 <template name="userProfile">
     {{#if currentUser}}
         <!-- Displayed only when the user is logged in-->
-        <div class="tabs is-boxed is-fullwidth">
+        <div class="tabs is-boxed is-fullwidth is-toggle">
             <ul>
                 <li id="favorite">
                     <a>
