--- a/TFC/imports/UI/modals/register.html
+++ b/TFC/imports/UI/modals/register.html
@@ -11,63 +11,67 @@
 
             <section class="modal-card-body">
 
-                <div class="field has-animated-label" id="usernameField">
-                    <div class="control has-icons-left">
-                        <input type="text" class="input has-animated-label" name="username" id="username" placeholder=" " required/>
-                        <label for="username" class="label is-animated">Nom d'utilisateur</label>
-                        <span class="icon is-left">
-                            <i class="fas fa-user-circle"></i>
-                        </span>
+                <form id="registerForm">
+                    <div class="field has-animated-label" id="usernameField">
+                        <div class="control has-icons-left">
+                            <input type="text" class="input has-animated-label" name="username" id="username" placeholder=" " required/>
+                            <label for="username" class="label is-animated">Nom d'utilisateur</label>
+                            <span class="icon is-left">
+                                <i class="fas fa-user-circle"></i>
+                            </span>
+                        </div>
+                        <p class="help is-success"></p>
+                        <p class="help is-danger"></p>
                     </div>
-                    <p class="help is-success"></p>
-                    <p class="help is-danger"></p>
-                </div>
 
-                <div class="field has-animated-label" id="emailField">
-                    <div class="control has-icons-left">
-                        <input type="email" class="input has-animated-label" name="email" id="email" placeholder=" " required>
-                        <label for="email" class="label is-animated">Email</label>
-                        <span class="icon is-left">
-                            <i class="fas fa-envelope"></i>
-                        </span>
+                    <div class="field has-animated-label" id="emailField">
+                        <div class="control has-icons-left">
+                            <input type="email" class="input has-animated-label" name="email" id="email" placeholder=" " required>
+                            <label for="email" class="label is-animated">Email</label>
+                            <span class="icon is-left">
+                                <i class="fas fa-envelope"></i>
+                            </span>
+                        </div>
+                        <p class="help is-success"></p>
+                        <p class="help is-danger"></p>
                     </div>
-                    <p class="help is-success"></p>
-                    <p class="help is-danger"></p>
-                </div>
 
-                <div class="field has-animated-label">
-                    <div class="control has-icons-left">
-                        <input type="password" class="input has-animated-label" name="password" id="password" placeholder=" " autocomplete="new-password" required>
-                        <label for="password" class="label is-animated">Mot de passe</label>
-                        <span class="icon is-left">
-                            <i class="fas fa-lock"></i>
-                        </span>
+                    <div class="field has-animated-label">
+                        <div class="control has-icons-left">
+                            <input type="password" class="input has-animated-label" name="password" id="password" placeholder=" " autocomplete="new-password" required>
+                            <label for="password" class="label is-animated">Mot de passe</label>
+                            <span class="icon is-left">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                        </div>
                     </div>
-                </div>
 
-                <div class="field has-animated-label">
-                    <div class="control has-icons-left">
-                        <input type="password" class="input has-animated-label" name="confirmPassword" id="confirmPassword" placeholder=" " autocomplete="new-password" required>
-                        <label for="confirmPassword" class="label is-animated">Confirmer le mot de passe</label>
-                        <span class="icon is-left">
-                            <i class="fas fa-lock"></i>
-                        </span>
+                    <div class="field has-animated-label">
+                        <div class="control has-icons-left">
+                            <input type="password" class="input has-animated-label" name="confirmPassword" id="confirmPassword" placeholder=" " autocomplete="new-password" required>
+                            <label for="confirmPassword" class="label is-animated">Confirmer le mot de passe</label>
+                            <span class="icon is-left">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                        </div>
                     </div>
-                </div>
 
-                <div class="field">
-                    <input type="checkbox" class="is-checkradio" id="newsletter" name="newsletter" value="newsletter">
-                    <label for="newsletter" class="label">Je souhaite recevoir les newsletter de Plexar (pas plus d'un email par mois)</label>
-                </div>
+                    <div class="field">
+                        <input type="checkbox" class="is-checkradio" id="newsletter" name="newsletter" value="newsletter">
+                        <label for="newsletter" class="label">Je souhaite recevoir les newsletter de Plexar (pas plus d'un email par mois)</label>
+                    </div>
+                </form>
+
+                <br>
+
+                <button class="button is-medium is-fullwidth has-background-success" id="registerSubmit">S'inscrire</button>
 
             </section>
 
-            <div class="card-footer-item" style="background: #8cba51;">
-                <p>S'inscrire</p>
-            </div>
+
             <footer class="modal-card-foot">
                 <div class="card-footer-item">
-                    <p class="subtitle">Déjà membre ? <span class="link login" id="test">Connectez-vous</span> pour continuer</p>
+                    <p class="subtitle has-text-centered">Déjà membre ? <span class="link login">Connectez-vous</span> pour continuer</p>
                 </div>
             </footer>
         </div>
